crates/compiler/tests/parse_errors/name_mismatch.elm
module Main exposing (..)
x : Int
y = 1
